# wlyz

./: .env.example  .gitignore  Dockerfile  Dockerfile.admin  PROMPT.md  README.md  docker-compose.yml
.trae/specs/integrate-external-card-platform/: checklist.md  spec.md  tasks.md
apps/admin/: .env.development  .env.production  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/admin/src/: App.vue  components.d.ts  env.d.ts  main.ts
apps/server/: go.mod  go.sum
apps/server/cmd/: main.go
apps/server/migrations/: 001_init_schema.up.sql  (+69 more)
configs/: config.yaml.example
deploy/nginx/: admin.conf  gateway.conf
deploy/prometheus/: prometheus.yml  rules.yml
docs/: CHANGELOG.md  EXTERNAL_PLATFORM_INTEGRATION_PLAN.md  PROJECT.md  SPEC.md  TODO.md
keys/: .gitkeep
scripts/: auto_push.sh  baota_deploy.sh  clean_dirty_migration.sh  deploy_update.sh  gen_rsa_key.sh  one_click_deploy.sh  reset_admin_password.sh  verify_migration_015.sh
sdks/cpp/: CMakeLists.txt  README.en.md  README.md
sdks/cpp/examples/: example.cpp
sdks/cpp/include/keyauth/: keyauth.hpp
sdks/cpp/src/: keyauth.cpp
sdks/csharp/: README.en.md  README.md
sdks/epl/: README.en.md  README.md  keyauth_sdk.e.txt
sdks/go/: README.en.md  README.md  go.mod
sdks/java/: README.en.md  README.md  pom.xml
sdks/nodejs/: README.en.md  README.md  index.d.ts  index.js  package.json
sdks/php/: README.en.md  README.md  composer.json
sdks/python/: README.en.md  README.md  setup.py
sdks/tests/: Sign.java  sign.cpp  sign.cs  sign.e.txt  sign.go  sign.js  sign.php  sign.py
(+230 files in other folders)
